2009-09-11  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Always set the help panel properties on the 
	internal control, because they are inherited and can change with 
	the parent.
	[Fixes bug #525305]

2009-09-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RichTextBox.cs: When processing rtf, don't add a new line if we
	already have one for that position. This way we avoid overriding by
	mistake our lines when copying/pasting.
	Fixes #513030.

2009-09-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TextControl.cs: When inserting new lines, look for the end of file
	char, and remove chars after it. This is unlikely to happeng either
	loading a file, pasting text or pressing a char, but can happen using
	the TextBox.Text property.
	Fixes #535884.

2009-09-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Line.cs: In DeleteCharacters, cache line.Length for every tag, since
	tag.Start changes will modify it indirectly and then we would end up
	with wrong values.
	Fixes #512521.

2009-09-03  Ivan N. Zlatev  <contact@i-nz.net>

	* BindingSource.cs: Implement support for chained data sources.
	* ListBindingHelper.cs: Add support for ICurrencyManagerProvider and 
	clean up.
	[Fixes part of bug #536547]

2009-09-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RichTextBox.cs: When saving the text to a file using SaveFile use
	Environment.NewLine to separate the lines. This way we should be
	saving the files according to the system.
	Fixes the remaining part of #511515.

2009-08-31  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RichText.cs: Remove some unix new line characters and use
	Environment.NewLine. Fixes part of #511515.

2009-08-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TextBoxBase.cs: Modified should *not* be modified from the Text
	property, as our new tests show. It should be to false, however, in
	Append and Clear; and Paste, Cut, Undo, and direct user input should set it